#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2012-12-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999955 released.

        * Created variable in FA_Core.pm to hold mode setting.


2012-12-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999954 released.

        * Fixed permissions with password db files.


2012-12-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999953 released.

        * Fixed permissions when making dirs. With cygwin
          mkdir, -p cannot be used with -m.

        * Added Owner-Group permissions to Makefile.PL.
       
        * Changed Non-Privileged to Full-Access.


2012-12-26  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999952 released.

        * Fixed MozRepl install when Cygwin already present
          and using Windows Installer.


2012-12-25  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999951 released.

        * Merry Christmas!

        * Completed code for automated installation of
          FireFox and Mozprel. Special configuration is
          no longer required.


2012-12-24  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999950 released.

        * Term::Menus out of sync.

        * Fixed Permissioning Setup with Cygwin.


2012-12-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999949 released.

        * Fixed editing so that files open even with
          syntax errors.


2012-12-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999948 released.

        * More firefox mozrepl install code in Makefile.PL.

