@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 4fc93d52de1b2bb70676a44afc55126a9b00cf0f ChangeLog
+SHA1 0a1f2bce291ef3b35f0c9aef48ac28aada7ff37b ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 7ee0bc6dd04141ecc243a14483c665e393ea95a1 META.yml
-SHA1 06c2be286698d89f2121759412e7a0b674534e8e MYMETA.json
-SHA1 02e8d803878afa64bfa7fc730efa9623f7a54ddd MYMETA.yml
-SHA1 58c74445f146c7ced4d4ab1bfea37cb98e7eefbb Makefile.PL
+SHA1 477a1878a61edd06a2b4717911df668e07121f1b META.yml
+SHA1 27882354128aa9fa8752b4205da54d69d620c907 MYMETA.json
+SHA1 03e847ef28195f1efd5b06ce2c8abbfd6ae61691 MYMETA.yml
+SHA1 c9243314896437514b7f31b220d7bc92e8edd207 Makefile.PL
 SHA1 fd6c642523f44765fc64b3515231a3ad62f90d73 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 4fe10515de60ffa439d09fbb4eadf7dc1cfd275f bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 d3bdf84ee1608ae8ef8e85567dc4057de4f1b8fa install_mozrepl_plugin.ahk
-SHA1 ba97e77c297e4ad0bf207679795b214b70bb4fad lib/Net/FullAuto.pm
+SHA1 7d6de137ffd913951676db1b7ff554efa393fd40 lib/Net/FullAuto.pm
 SHA1 8a710a48bb21aa584949dbbe3649c0d5b2b084fc lib/Net/FullAuto/Custom/BackUp/README
 SHA1 b9b90c2707951d9d5753dc9ef9699abe7daddee9 lib/Net/FullAuto/Custom/README
 SHA1 7cacb9a2873a4baac0d084529eed8cb78a301248 lib/Net/FullAuto/Distro/fa_code.pm
@@ -50,13 +50,13 @@ SHA1 5e5bf1fb274122e41b89de64d065cfbacc8b2cd6 lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 532a954b8f2f3183851b3381bef60d7d70fa0541 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 a624f36d14585c7635e2a04cb771e0bf0157c0f7 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 83aa04e2d6b19ce8884616ff671ab1e8648fe106 lib/Net/FullAuto/FA_Core.pm
+SHA1 1d021ba66cc2474b4faad9b39764a6ab0724dc0d lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlDc00IACgkQJM3IZYB6aOrlcACgoJYE2sC/31TBiDAR7onMbyWf
-V9gAn1qccJylxWTvS9NODPlRgwje8fH8
-=XNyn
+iEYEARECAAYFAlDh9BgACgkQJM3IZYB6aOo/2wCgmODnjvlvIYgnA9Qr2bd4OqF9
+/2QAn1dpZChM+SFZOuRAUWFrW5Mcrt1d
+=iHsH
 -----END PGP SIGNATURE-----
