@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.999955';
+our $VERSION='0.999956';
 
 
 use 5.005;
